--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">cleanarchitecture-baemin</string>
     <string name="home">홈</string>
     <string name="my">My</string>
+    <string name="fast_delivery">배달빠른순</string>
+    <string name="low_delivery_tip">배달팁 낮은순</string>
+    <string name="default_order">기본 순</string>
+    <string name="top_rate">별점 높은 순</string>
+    <string name="initialize">초기화</string>
 </resources>
