--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,8 @@
     <string name="basket_count">+%d</string>
 
     <string name="price">%,d원</string>
+    <string name="logout">로그아웃</string>
+    <string name="empty_orders_text">주문 리스트가 존재하지 않습니다.</string>
+    <string name="google_login_required">구글 로그인이 필요합니다</string>
 
 </resources>
