--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,11 @@
     <string name="restaurant_like_list">찜 목록</string>
     <string name="empty_like_list">찜 목록이 비어있습니다.</string>
 
+    <string name="order_list_check">주문 확인</string>
+    <string name="do_order">주문하기</string>
+    <string name="clear_oder_menu">주문 취소</string>
+
+    <string name="request_error">요청했지만 예상치 못한 이슈가 발생하였습니다. : %s</string>
+    <string name="user_id_not_found">유저 id가 존재하지 않습니다.</string>
+
 </resources>
