--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
 
     <string name="request_error">요청했지만 예상치 못한 이슈가 발생하였습니다. : %s</string>
     <string name="user_id_not_found">유저 id가 존재하지 않습니다.</string>
+    <string name="order_history_title">주문내역 : %s</string>
 
 </resources>
